--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "gh-pages": "^6.1.0"
   }
 }
