--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.12.0",
     "react-router": "^6.18.0",
     "react-router-dom": "^6.20.0",
